# memory-context-claude-ai

./: .gitignore  JDEX-ERROR-FIX-PLAN.md  README.md  SECURITY.md  SESSION-2026-02-01-local-voice-mode-setup.md  SESSION-2026-02-05-ironclad-workflow.md  mypy.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.workflow/sessions/: SESSION-2026-02-05-security-fixes.md
docs/articles/: ASTGL-cortex-event-sourced-memory.md
docs/sessions/: SESSION-2026-01-31-github-ci-resolution.md  SESSION-2026-01-31-tier0-phase1-2.md  SESSION-2026-01-31-tier0-phase3.md  SESSION-2026-01-31-tier0-phase8-integration.md  SESSION-2026-01-31-tier0-real-world-testing.md  SESSION-2026-02-05-phase2-test-automation.md  SESSION-2026-02-05-rename-to-cortex.md
docs/testing/: AB-COMPARISON-RESULTS.md  AUTOMATED-TESTING-RESULTS.md  BASELINE-DATA-RESULTS.md  PHASE3-BASELINE-GUIDE.md  PHASE4-COMPARISON-GUIDE.md  README.md
scripts/: ironclad-init.sh  ship.js  verify.js
scripts/testing/: __init__.py  baseline_reporter.py  comparison_recorder.py  comparison_reporter.py  results_reporter.py  run_phase2.py  run_phase3.py  run_phase4.py  session_recorder.py  test_environment.py  transcript_analyzer.py  transcript_generator.py
src/cortex/: __init__.py  __main__.py  anticipate.py  briefing.py  cli.py  config.py  db.py  embeddings.py  hooks.py  hybrid_search.py  migration.py  projections.py  search.py  snapshot.py  sqlite_store.py  store.py  vec.py
src/cortex/mcp/: __init__.py  server.py
src/memory_context_claude_ai/: __init__.py  config.py  extractors.py  models.py  project.py  store.py
tests/: conftest.py  test_anticipate.py  test_config.py  test_db.py  test_embeddings.py  test_extractors.py  test_hybrid_search.py  test_integration.py  test_mcp_server.py  test_migration.py  test_models.py  test_phase4_scripts.py  test_project.py  test_projections.py  test_search.py  test_snapshot.py  test_sqlite_store.py  test_store.py  test_vec.py
