# pyproject.toml - Python project configuration
# Used by: ruff, pip, pytest, and other Python tools

[project]
name = "cortex"
version = "0.2.0"
description = "Cortex: Event-sourced memory for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tier2 = ["sentence-transformers>=3.1.0", "numpy>=1.24.0"]
tier3 = ["mcp>=1.0.0"]
all = ["sentence-transformers>=3.1.0", "numpy>=1.24.0", "mcp>=1.0.0"]

[project.scripts]
cortex = "cortex.__main__:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "E402",  # Module level import not at top of file
]

[tool.ruff.lint.isort]
known-first-party = ["cortex"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
